# wgpu-playground

./: Cargo.toml  README.md
.cargo/: config.toml
assets/: _game_of_life.wgsl  game_of_life.wgsl.debug.wgsl
crates/diamond/: Cargo.toml
crates/diamond/src/: config.rs  lib.rs  main.rs  window.rs
crates/game_of_life_sim/: Cargo.toml  README.md
crates/game_of_life_sim/assets/: core.wgsl  draw.wgsl  game_of_life.wgsl
crates/game_of_life_sim/src/: camera.rs  canvas_data.rs  dsl.rs  gameloop.rs  lib.rs  main.rs
crates/game_of_life_sim/src/camera/: ortho_camera.rs  projection.rs
crates/learn_wgpu/: Cargo.toml  README.md
crates/learn_wgpu/src/: camera.rs  lib.rs  state.rs  texture.rs
crates/learn_wgpu/src/challenge/: main.rs  state.rs  vertex.rs
crates/learn_wgpu/src/shaders/: shader.wgsl
crates/run_wasm/: Cargo.toml
src/: canvas_data.rs  main.rs  pipelines.rs  shaders.rs
