[package]
edition = "2021"
name    = "diamond"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bytemuck   = { version = "1.12", features = ["derive"] }
cfg-if     = "1"
env_logger = "0.10"
glam       = "0.24"
image      = "0.24"
log        = "0.4"
pollster   = "0.3"
wgpu       = "0.16"
winit      = "0.28"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
console_log              = "1"
wasm-bindgen             = "0.2"
wasm-bindgen-futures     = "0.4"
web-sys                  = { version = "0.3", features = ["Document", "Window", "Element"] }
wgpu                     = { version = "0.16", features = ["webgl"] }

[build-dependencies]
cfg_aliases = "0.1"
